# a121-rs

./: Cargo.toml  README.md
examples/esp32c6-hal/: Cargo.toml
examples/esp32c6-hal/src/: main.rs
examples/esp32s3-hal/: Cargo.toml
examples/xe125-nightly/: Cargo.toml
src/: hal.rs  lib.rs  processing.rs  radar.rs
src/detector/: distance.rs  presence.rs
src/detector/presence/: config.rs  results.rs
