[package]
name = "esp32c6-hal"
version = "0.1.0"
authors = ["Leon <12817042+thedevleon@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = [ "esp32c6", "embedded-hal", "async"] }
esp-println = { version = "0.11.0", default-features = false, features = ["esp32c6", "log", "jtag-serial", "defmt-espflash"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.4.0" }
esp-hal-embassy = { version = "0.3.0", default-features = false, features = [
    "esp32c6",
    "executors",
] }
embassy-time = { version = "0.3.1", default-features = false, features = [
    "generic-queue-8",
] }
embassy-time-driver = { version = "0.1.0", optional = true }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-40960"] }
embassy-futures     = "0.1.1"
embassy-sync        = "0.6.0"
embassy-usb         = { version = "0.2.0", default-features = false, optional = true }
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
a121-rs = { path = "../../", features = ["distance", "nightly-logger", "libm"] }
static_cell = { version = "2.0.0", features = ["nightly"] }
defmt = "0.3.8"
tinyrlibc = { git = "https://github.com/rust-embedded-community/tinyrlibc.git", version = "0.3.0", features = ["alloc"] }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
